--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Testing App</title>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<script src="node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
 	
 </head>
